web/book/tests/snapshots/snapshot__language-features__regex__regex-expressions__5.snap
---
source: web/book/tests/snapshot.rs
expression: "prql target:sql.sqlite\n\nfrom tracks\nfilter (name ~= \"But Why Isn't Your Syntax More Similar\\\\?\")\n"
---
SELECT
  *
FROM
  tracks
WHERE
  name REGEXP 'But Why Isn''t Your Syntax More Similar\?'

